--- a/Gitpractice.html
+++ b/Gitpractice.html
@@ -9,5 +9,6 @@
     <h1>Git & GitHub</h1>
     <h3>First git practies</h3>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur impedit aperiam reprehenderit sequi asperiores, dolorum non porro vitae et sint.</p>
+    <p>This is Feature one</p>
 </body>
 </html>
